--- a/app/src/main/res/layout/activity_landlord_main.xml
+++ b/app/src/main/res/layout/activity_landlord_main.xml
@@ -14,10 +14,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <include
+            android:id="@+id/header"
+            layout="@layout/header_toolbar_main"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <FrameLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_70sdp"
             android:layout_marginBottom="@dimen/_50sdp"/>
 
         <com.google.android.material.bottomappbar.BottomAppBar
