--- a/app/src/main/res/layout/listitem_my_property.xml
+++ b/app/src/main/res/layout/listitem_my_property.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_100sdp"
+    android:layout_height="@dimen/_120sdp"
     app:cardCornerRadius="@dimen/_8sdp"
     app:cardElevation="@dimen/_8sdp"
     android:layout_margin="@dimen/_4sdp">
@@ -15,7 +15,8 @@
         <ImageView
             android:id="@+id/propertyImageView"
             android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_100sdp"
+            android:layout_height="@dimen/_120sdp"
+            android:scaleType="centerCrop"
             android:src="@drawable/home_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -24,38 +25,49 @@
             android:id="@+id/propertyName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Surdas complex"
-            android:fontFamily="@font/montserrat_semibold"
-            android:textSize="@dimen/_16ssp"
-            android:maxLines="1"
-            android:layout_marginTop="@dimen/_4sdp"
             android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:maxLines="1"
+            android:text="Surdas complex"
+            android:textSize="@dimen/_16ssp"
+            app:layout_constraintBottom_toTopOf="@+id/propertyAddress"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end_vertical"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/propertyImageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/propertyAddress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Gayatri colony , kukshi dist - dhar[M.P]"
-            android:textSize="@dimen/_12ssp"
-            android:maxLines="2"
             android:layout_marginTop="@dimen/_4sdp"
             android:fontFamily="@font/montserrat_medium"
+            android:maxLines="4"
+            android:text="Gayatri colony , kukshi dist - dhar[M.P]"
+            android:textSize="@dimen/_11ssp"
+            app:layout_constraintBottom_toTopOf="@+id/propertyType"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end_vertical"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/propertyName"
             app:layout_constraintTop_toBottomOf="@+id/propertyName" />
 
         <TextView
             android:id="@+id/propertyType"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="1 BHK"
-            android:maxLines="1"
-            android:textSize="@dimen/_12ssp"
+            android:layout_marginTop="@dimen/_6sdp"
             android:fontFamily="@font/montserrat_medium"
-            android:layout_marginTop="@dimen/_4sdp"
+            android:maxLines="1"
+            android:text="1 BHK"
+            android:drawableLeft="@drawable/ic_dot"
+            android:drawablePadding="@dimen/_3sdp"
+            android:textColor="@color/app_default_color"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/propertyRent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/propertyAddress"
             app:layout_constraintTop_toBottomOf="@+id/propertyAddress" />
 
@@ -63,15 +75,14 @@
             android:id="@+id/propertyRent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="7500/month"
-            android:maxLines="1"
-            android:textSize="@dimen/_14ssp"
             android:drawableLeft="@drawable/ic_currency"
-            android:textColor="@color/black"
             android:fontFamily="@font/montserrat_medium"
+            android:maxLines="1"
+            android:text="7500"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14ssp"
             app:layout_constraintBottom_toBottomOf="@+id/propertyType"
-            app:layout_constraintStart_toEndOf="@+id/propertyType"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical"
             app:layout_constraintTop_toTopOf="@+id/propertyType" />
 
         <androidx.constraintlayout.widget.Guideline
