--- a/app/src/main/res/layout/listitem_my_property.xml
+++ b/app/src/main/res/layout/listitem_my_property.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/itemLayout"
     android:layout_height="@dimen/_120sdp"
     app:cardCornerRadius="@dimen/_8sdp"
     app:cardElevation="@dimen/_8sdp"
@@ -94,4 +95,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
