view profile commit

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/rootLayoutOfLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background_drawable"
     tools:context=".activity.auth.login.LoginActivity">
 
     <ScrollView
