--- a/app/src/main/res/layout/listitem_my_property.xml
+++ b/app/src/main/res/layout/listitem_my_property.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/itemLayout"
-    android:layout_height="@dimen/_120sdp"
+    android:layout_height="@dimen/_100sdp"
     app:cardCornerRadius="@dimen/_8sdp"
     app:cardElevation="@dimen/_8sdp"
     android:layout_margin="@dimen/_4sdp">
@@ -16,7 +16,7 @@
         <ImageView
             android:id="@+id/propertyImageView"
             android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_120sdp"
+            android:layout_height="@dimen/_100sdp"
             android:scaleType="centerCrop"
             android:src="@drawable/home_image"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,14 +27,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_4sdp"
+
             android:fontFamily="@font/montserrat_semibold"
             android:maxLines="1"
             android:text="Surdas complex"
             android:textSize="@dimen/_16ssp"
             app:layout_constraintBottom_toTopOf="@+id/propertyAddress"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end_vertical"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/propertyImageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
@@ -47,10 +46,10 @@
             android:fontFamily="@font/montserrat_medium"
             android:maxLines="4"
             android:text="Gayatri colony , kukshi dist - dhar[M.P]"
-            android:textSize="@dimen/_11ssp"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintBottom_toTopOf="@+id/propertyType"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end_vertical"
-            app:layout_constraintHorizontal_bias="0.5"
+
             app:layout_constraintStart_toStartOf="@+id/propertyName"
             app:layout_constraintTop_toBottomOf="@+id/propertyName" />
 
@@ -59,16 +58,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_6sdp"
+            android:drawableLeft="@drawable/ic_dot"
+            android:drawablePadding="@dimen/_3sdp"
             android:fontFamily="@font/montserrat_medium"
             android:maxLines="1"
             android:text="1 BHK"
-            android:drawableLeft="@drawable/ic_dot"
-            android:drawablePadding="@dimen/_3sdp"
             android:textColor="@color/app_default_color"
-            android:textSize="@dimen/_12ssp"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/propertyRent"
-            app:layout_constraintHorizontal_bias="0.5"
+
             app:layout_constraintStart_toStartOf="@+id/propertyAddress"
             app:layout_constraintTop_toBottomOf="@+id/propertyAddress" />
 
@@ -77,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_currency"
-            android:fontFamily="@font/montserrat_medium"
+            android:fontFamily="@font/montserrat_semibold"
             android:maxLines="1"
             android:text="7500"
             android:textColor="@color/black"
