profile bugs commits

--- a/app/src/main/res/layout/fragment_my_property.xml
+++ b/app/src/main/res/layout/fragment_my_property.xml
@@ -15,12 +15,25 @@
                 android:id="@+id/myPropertyRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/listitem_my_property"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:id="@+id/createNewPropertyTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="You didn't have any property \nCreate New Property"
+            android:textAlignment="center"
+            android:textSize="@dimen/_16ssp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/myPropertyRecyclerView" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
