--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -210,7 +210,7 @@
                 android:layout_height="@dimen/_52sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Create"
+                android:text="Update"
                 android:textAllCaps="false"
 
                 android:textAppearance="@style/InputTextAppearance"
