--- a/app/src/main/res/layout/layout_send_request_for_book_dialog.xml
+++ b/app/src/main/res/layout/layout_send_request_for_book_dialog.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/_300sdp"
+    android:layout_width="@dimen/_270sdp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/_8sdp"
     android:layout_margin="@dimen/_4sdp">
@@ -19,6 +19,7 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/montserrat_semibold"
             android:textSize="@dimen/_16ssp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
