--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".landlord.activity.fragments.request.MyRequestFragment">
 
@@ -14,4 +13,16 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/noRequestTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="No Request Available"
+        android:layout_centerInParent="true"
+        android:textAlignment="center"
+        android:textSize="@dimen/_16ssp"
+        android:visibility="gone" />
+
+
+</RelativeLayout>
