--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rootLayoutOfChat"
     tools:context=".comman.chat.ChatActivity">
 
     <include
@@ -19,15 +20,16 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:reverseLayout="true"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/header"
+        app:reverseLayout="false"
+        app:stackFromEnd="true"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/messageLayout"/>
 
       <RelativeLayout
           android:id="@+id/messageLayout"
           android:layout_width="match_parent"
-          android:layout_height="@dimen/_46sdp"
+          android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toBottomOf="parent">
@@ -37,10 +39,13 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerVertical="true"
-              android:layout_margin="@dimen/_8sdp"
-              android:hint="Enter message"
+              android:layout_marginStart="@dimen/_8sdp"
+              android:layout_marginTop="@dimen/_8sdp"
+              android:layout_marginEnd="@dimen/_8sdp"
+              android:layout_marginBottom="@dimen/_8sdp"
+              android:layout_toLeftOf="@+id/sendImageView"
               android:fontFamily="@font/montserrat_medium"
-              android:layout_toLeftOf="@+id/sendImageView"/>
+              android:hint="Enter message" />
 
           <ImageView
               android:id="@+id/sendImageView"
