--- a/app/src/main/res/layout/listitem_chat_sender_message.xml
+++ b/app/src/main/res/layout/listitem_chat_sender_message.xml
@@ -4,11 +4,13 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/_4sdp"
     android:layout_marginStart="@dimen/_32sdp"
+    android:layout_marginBottom="@dimen/_4sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="@dimen/_4sdp">
 
         <TextView
             android:id="@+id/messageText"
