--- a/app/src/main/res/layout/listitem_user_chat_list.xml
+++ b/app/src/main/res/layout/listitem_user_chat_list.xml
@@ -28,8 +28,9 @@
             android:layout_marginLeft="@dimen/_4sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="Sanskar Patidar"
+            android:singleLine="true"
             android:textColor="@color/black_text_primary"
-            android:textSize="@dimen/_16ssp"
+            android:textSize="@dimen/_14ssp"
             app:layout_constraintBottom_toTopOf="@+id/occupationTextView"
             app:layout_constraintStart_toEndOf="@+id/profileImageView"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +44,7 @@
             android:singleLine="true"
             android:textColor="@color/black_text_secondary"
             android:text="Android Developer"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/nameTextView"
             app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
