--- a/app/src/main/res/layout/activity_view_property_landlord.xml
+++ b/app/src/main/res/layout/activity_view_property_landlord.xml
@@ -332,7 +332,6 @@
                 android:drawablePadding="@dimen/_3sdp"
                 android:textSize="@dimen/_14ssp"
                 android:fontFamily="@font/montserrat_medium"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/guideline_middle_vertical"
@@ -347,7 +346,6 @@
                 android:text="Description"
                 android:textColor="@color/black_text_primary"
                 android:textSize="@dimen/_13ssp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_horizontal"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_middle_vertical"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@id/guideline_start_vertical"
@@ -365,6 +363,74 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/guideline_middle_vertical"
                 app:layout_constraintTop_toTopOf="@+id/propertyDescriptionLabel" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/propertyBookingStatusLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_16sdp"
+                app:cardCornerRadius="@dimen/_4sdp"
+                app:cardElevation="@dimen/_1sdp"
+                app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical"
+                app:layout_constraintEnd_toEndOf="@+id/guideline_end_vertical"
+                app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/propertyDescriptionData">
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_6sdp">
+
+                    <TextView
+                        android:id="@+id/bookingStatusLabelTextView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Booking Status"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14ssp"
+                        android:fontFamily="@font/montserrat_medium"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/bookingDateTextView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_12ssp"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        android:fontFamily="@font/montserrat_medium"
+                        android:text="From : 01-01-2001"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/viewProfileImageView"
+                        app:layout_constraintTop_toBottomOf="@+id/bookingStatusLabelTextView"/>
+
+                    <ImageView
+                        android:id="@+id/viewProfileImageView"
+                        android:layout_width="@dimen/_32sdp"
+                        android:layout_height="@dimen/_32sdp"
+                        android:src="@drawable/ic_profile_pin"
+                        android:layout_marginRight="@dimen/_4sdp"
+                        app:layout_constraintTop_toTopOf="@+id/bookingDateTextView"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/bookingDateTextView"
+                        app:layout_constraintStart_toEndOf="@+id/bookingDateTextView"/>
+
+                    <Switch
+                        android:id="@+id/vacantRoomSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Vacant Room?"
+                        android:textSize="@dimen/_12ssp"
+                        android:textColor="@color/black_text_secondary"
+                        android:fontFamily="@font/montserrat_medium"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/bookingDateTextView"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
 
 
             <androidx.constraintlayout.widget.Guideline
