--- a/app/src/main/res/menu/bottom_navigation_menu_items.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu_items.xml
@@ -16,7 +16,8 @@
         android:title="Chat"
         android:icon="@drawable/ic_chat"/>
 
-    <item android:id="@+id/myProfile"
-        android:title="Profile"
-        android:icon="@drawable/ic_profile"/>
+    <item android:id="@+id/myMore"
+        android:title="More"
+        android:icon="@drawable/ic_dehaze"/>
+
 </menu>
