--- a/app/src/main/res/layout/listitem_chat_sender_message.xml
+++ b/app/src/main/res/layout/listitem_chat_sender_message.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/_4sdp"
-    android:layout_marginStart="@dimen/_32sdp"
-    android:layout_marginBottom="@dimen/_4sdp"
+    android:gravity="end"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/_6sdp"
+        android:layout_marginTop="@dimen/_6sdp"
+        android:layout_marginBottom="@dimen/_2sdp"
+        android:layout_marginStart="@dimen/_48sdp"
+        android:layout_marginEnd="@dimen/_16sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/_4sdp">
+        android:padding="@dimen/_8sdp">
 
         <TextView
             android:id="@+id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hi, how are you friend?"
-            android:textColor="@color/black_text_secondary"
+            android:textColor="@color/black"
             android:fontFamily="@font/montserrat_medium"
             android:textSize="@dimen/_12ssp"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="@dimen/_4sdp"/>
@@ -31,11 +39,14 @@
             android:text="3:00 AM"
             android:textColor="@color/black_text_secondary"
             android:fontFamily="@font/montserrat_medium"
-            android:textSize="@dimen/_10ssp"
+            android:textSize="@dimen/_8ssp"
+            android:layout_marginTop="@dimen/_2sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/messageText"
             android:layout_marginRight="@dimen/_4sdp"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+       </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
