--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -148,7 +148,7 @@
                     android:text=" Login"
                     android:textStyle="bold"
                     android:textAppearance="@style/InputTextAppearance"
-                    android:textColor="@color/indigo_600" />
+                    android:textColor="@color/app_default_color" />
 
             </LinearLayout>
 
