--- a/app/src/main/res/drawable/circular_plain_drawable.xml
+++ b/app/src/main/res/drawable/circular_plain_drawable.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/indigo_600"/>
+    <solid android:color="@color/orange_500"/>
     <size android:height="@dimen/_40sdp" android:width="@dimen/_40sdp"/>
 </shape>
