--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -75,9 +75,9 @@
                 android:layout_centerHorizontal="true"
                 android:textAppearance="@style/InputTextAppearance"
                 app:cornerRadius="@dimen/_24sdp"
-                android:textColor="@color/indigo_600"
+                android:textColor="@color/orange_500"
                 android:backgroundTint="@color/white"
-                app:strokeColor="@color/indigo_600"
+                app:strokeColor="@color/orange_500"
                 app:strokeWidth="@dimen/_1sdp"
                 app:rippleColor="@color/black_text_disabled" />
 
