--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,14 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".activity.general.splash.SplashActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/upCardView"
+        android:layout_width="@dimen/_60sdp"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/app_default_color"
+        app:cardCornerRadius="@dimen/_4sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_semibold"
+            android:gravity="center"
+            android:padding="@dimen/_4sdp"
+            android:text="Up"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_24ssp" />
+
+    </androidx.cardview.widget.CardView>
+
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="@font/montserrat_semibold"
+        android:gravity="center"
+        android:padding="@dimen/_4sdp"
+        android:text="Keep"
+        android:textColor="@color/app_default_color"
+        android:textSize="@dimen/_24ssp"
+        app:layout_constraintBottom_toBottomOf="@+id/upCardView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/splash_house_logo" />
+        app:layout_constraintStart_toEndOf="@+id/upCardView"
+        app:layout_constraintTop_toTopOf="@+id/upCardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
