--- a/app/src/main/res/layout/layout_send_request_for_book_dialog.xml
+++ b/app/src/main/res/layout/layout_send_request_for_book_dialog.xml
@@ -89,14 +89,14 @@
             android:text="Send Request"
             android:textAllCaps="false"
             android:textAppearance="@style/InputTextAppearance"
-            android:textColor="@color/indigo_600"
+            android:textColor="@color/app_default_color"
             app:cornerRadius="@dimen/_6sdp"
             app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintTop_toBottomOf="@+id/selectDateTextInputLayout"
             app:rippleColor="@color/black_text_disabled"
-            app:strokeColor="@color/indigo_600"
+            app:strokeColor="@color/app_default_color"
             app:strokeWidth="@dimen/_1sdp" />
 
         <androidx.constraintlayout.widget.Guideline
