--- a/app/src/main/res/layout/listitem_chat_receiver_message.xml
+++ b/app/src/main/res/layout/listitem_chat_receiver_message.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_6sdp"
-        app:cardBackgroundColor="@color/blue_600"
+        app:cardBackgroundColor="@color/orange_500"
         android:layout_marginTop="@dimen/_6sdp"
         android:layout_marginBottom="@dimen/_2sdp"
         android:layout_marginStart="@dimen/_16sdp"
