--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <!-- Material Design Color palette from : http://www.google.com/design/spec/style/color.html or http://www.materialui.co/colors -->
 
     <color name="error_color">#C62828</color>
-    <color name="app_default_color">@color/blue_800</color>
+    <color name="app_default_color">@color/orange_500</color>
     <!--Reds-->
     <color name="red_50">#FFEBEE</color>
     <color name="red_100">#FFCDD2</color>
